# Clone-Xs

./: .databricksignore  .gitignore  Dockerfile  FUTURE_FEATURES.md  HOWTO.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  app.yaml  clone_queue_state.json  databricks_workflow.json  docker-compose.yml  edp_dev.tf.json  index.html  package-lock.json  package.json  plan_statements.sql  pyproject.toml  requirements.txt  src_cat.tf.json
.claude/: settings.json
.github/: CHANGELOG.md  CONTRIBUTING.md  HOWTO.md
api/: dependencies.py  main.py
config/: clone_config.yaml  demo_clone_demo_quick.json  demo_clone_demo_sales.json  demo_clone_gold_01.json  demo_clone_test_cat.json  expectation_suites.json  monitoring_config.json  reconciliation_schedules.json  scheduler_state.json
databricks-app/: .databricksignore  README.md  app.yaml  deploy.sh
desktop/: main.js  package-lock.json  package.json  preload.js
docs/: Clone-Xs_Article.html  Clone-Xs_Article.md  Clone-Xs_Article_Enhanced.html  Clone-Xs_Demo.html  Clone-Xs_Demo_Enhanced.html  Clone-Xs_Overview.html  Clone-Xs_Overview.pptx  FEATURES.md  PII_Detection_Reference.html  docusaurus.config.ts  generate_Clone-Xs_Overview_pptx.py  launch.html  linkedin-post-data-lab.md  package-lock.json  package.json  sidebars.ts  ~$Clone-Xs_Overview.pptx
exports/: edp_dev_cloned_20260315_164423.csv  edp_dev_cloned_20260315_164423_columns.csv
notebooks/: 01_serverless_clone.py  02_serverless_incremental_sync.py  03_serverless_validate.py  04_serverless_diff.py  05_serverless_pii_scan.py  06_serverless_stats_profiling.py  07_serverless_full_pipeline.py  catalog_clone_guide.py  clone_from_repo.py  clone_with_wheel.py
plugins/: logging_plugin.py  optimize_plugin.py  slack_notify_plugin.py
reports/: clone_report_20260314_220141.html  clone_report_20260314_220141.json  clone_report_20260314_222408.html  clone_report_20260314_222408.json  clone_report_20260314_223608.html  clone_report_20260314_223608.json  clone_report_20260314_223812.html  clone_report_20260314_223812.json  clone_report_20260315_080742.html  clone_report_20260315_080742.json  clone_report_20260315_081529.html  clone_report_20260315_081529.json  clone_report_20260315_082118.html  clone_report_20260315_082118.json  clone_report_20260315_082934.html  clone_report_20260315_082934.json  clone_report_20260315_083631.html  clone_report_20260315_083631.json  prod_profile.json
rollback_logs/: rollback_dst_20260314_231630.json  rollback_dst_20260314_231735.json  rollback_dst_20260314_231800.json  rollback_dst_20260314_231808.json  rollback_dst_20260314_231832.json  rollback_dst_20260315_033421.json  rollback_dst_20260315_165222.json  rollback_edp_dev_cloned_20260315_073517.json  (+14 more)
scripts/: build-desktop.sh  (+8 more)
(+600 files in other folders)
